; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_fmtdate.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_fmtdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"Invalid Date\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"%04d-%02d-%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, double)* @fmtdate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @fmtdate(i8* %0, double %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store double %1, double* %5, align 8
  %9 = load double, double* %5, align 8
  %10 = call i32 @YearFromTime(double %9)
  store i32 %10, i32* %6, align 4
  %11 = load double, double* %5, align 8
  %12 = call i32 @MonthFromTime(double %11)
  store i32 %12, i32* %7, align 4
  %13 = load double, double* %5, align 8
  %14 = call i32 @DateFromTime(double %13)
  store i32 %14, i32* %8, align 4
  %15 = load double, double* %5, align 8
  %16 = call i32 @isfinite(double %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %2
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %27

19:                                               ; preds = %2
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = add nsw i32 %22, 1
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @sprintf(i8* %20, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %21, i32 %23, i32 %24)
  %26 = load i8*, i8** %4, align 8
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %19, %18
  %28 = load i8*, i8** %3, align 8
  ret i8* %28
}

declare dso_local i32 @YearFromTime(double) #1

declare dso_local i32 @MonthFromTime(double) #1

declare dso_local i32 @DateFromTime(double) #1

declare dso_local i32 @isfinite(double) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
